apps/minio/overlays/prod/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio-virtual-service
  namespace: apps
spec:
  hosts:
  - "minio.secfam.cloud"
  gateways:
  - default/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9001
        host: minio.apps.svc.cluster.local
